--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^1.0.2",
     "axios": "^1.6.7",
     "core-js": "^3.36.0",
     "element-ui": "^2.15.14",
+    "highlight.js": "^11.9.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
